--- a/_posts/2014-08-08-process.md
+++ b/_posts/2014-08-08-process.md
@@ -34,7 +34,38 @@ project, and then track it by [Earned Value](/process/time/spi) data.
 
 The diagram shows how your informal request is transferred to Deliverables, which you accept at the
 end of the project:
-of
+
+<tikz>
+\begin{tikzpicture}
+    [node distance = 2.5cm,
+    auto, thick]
+
+    \node [cloud, draw=tpcRed, cloud ignores aspect, fill=tpcRed!40] (request) {Informal Request};
+    \node [block, below=0.8cm of request] (vision) {Vision};
+        \node [block, right=0.8cm of vision] (rom) {ROM Estimate};
+        \node [block, below=0.5cm of rom.south east] (retainer) {Retainer};
+        \node [block, right=0.8cm of rom] (scheduleEstimate) {Schedule Estimate};
+    \node [draw=tpcBlue, dashed, fit=(vision) (rom) (retainer) (scheduleEstimate)] (inception) {};
+
+    \node [block, below=2.8cm of vision] (srs) {SRS};
+        \node [block, right=0.8cm of srs] (budget) {Budget};
+        \node [block, right=0.8cm of budget] (schedule) {Schedule};
+        \node [block, below=0.5cm of budget.south east] (risks) {Risks};
+    \node [draw=tpcBlue, dashed, fit=(srs) (budget) (risks) (schedule)] (projectBody) {};
+
+    \node [choice, text width=2cm, below=2.5cm of srs] (lco) {LCO Milestone};
+
+    \node [block, below=1.5cm of lco] (deliverables) {Deliverables};
+    \node [block, below of=deliverables] (accepted) {Accepted Specification};
+
+    \path [line] (request) -- (vision);
+    \path [line] (vision) -- node [near end] {Requirements analysis and specification} (srs);
+    \path [line] (srs) -- (lco);
+    \path [line] (lco) -- node [right, text width=6cm] {Analysis, design, programming, testing and deployment} (deliverables);
+    \path [line] (deliverables) -- node [right] {User Acceptance Testing} (accepted);
+
+\end{tikzpicture}
+</tikz>
 
 Project [communications](/process/communication) are iterative and customer-focused. They include
 [Daily Reports](/process/communication/dailyreport), [incremental
