--- a/_posts/2014-08-08-about.md
+++ b/_posts/2014-08-08-about.md
@@ -27,9 +27,9 @@ TechnoPark Corp. is a software development with an innovative approach to projec
 [distributed software development teams](/about/teams). Like nowhere else, when you hire us as a
 general contractor you stay actively involved in every last detail of a project internal affairs.
 You control your business success by means of our automated instant metrics, compliant with
-[PMBOK](http://en.wikipedia.org/wiki/Project\_Management\_Body\_of\_Knowledge),
+[PMBOK](http://en.wikipedia.org/wiki/Project_Management_Body_of_Knowledge),
 [CMMI](http://www.sei.cmu.edu/cmmi/general/),
-[RUP](http://en.wikipedia.org/wiki/IBM\_Rational\_Unified\_Process) and [ISO 9001](http://en.wikipedia.org/wiki/ISO\_9001).
+[RUP](http://en.wikipedia.org/wiki/IBM_Rational_Unified_Process) and [ISO 9001](http://en.wikipedia.org/wiki/ISO_9001).
 
 We work only with fixed-price projects, where [Scope](/process/scope), [Cost](/process/cost) and
 [Schedule](/process/time) are always baselined. You do not pay salaries or any other indirect costs,
