--- a/_posts/about/2014-08-08-history.md
+++ b/_posts/about/2014-08-08-history.md
@@ -29,7 +29,7 @@ We are doing custom software development since 2001, here is a list of key facts
     <tr>
         <td>April, 2014</td>
         <td>
-            [teamed.io](http://www.teamed.io)
+            <a href='http://www.teamed.io'>teamed.io</a>
             founded to provide Team as a Service and
             aggregate our achievements in this area
         </td>
@@ -38,7 +38,7 @@ We are doing custom software development since 2001, here is a list of key facts
     <tr>
         <td>January, 2011</td>
         <td>
-            [Team as a Service](http://www.tpc2.com)
+            <a href='http://www.tpc2.com'>Team as a Service</a>
             (TaaS) business model was
             invented and presented to a number of prospects in
             Florida and North California.
@@ -49,7 +49,7 @@ We are doing custom software development since 2001, here is a list of key facts
         <td>October, 2010</td>
         <td>
             We took active participation in development and design
-            of a first draft of [XDSD](http://www.xdsd.org)
+            of a first draft of <a href='http://www.xdsd.org'>XDSD</a>
             (eXtremely Distributed Software Development)
             open methodology
         </td>
@@ -66,7 +66,7 @@ We are doing custom software development since 2001, here is a list of key facts
         <td>March, 2010</td>
         <td>A dedicated team of PHP programmers working under TechnoPark Corp.'s
             management finished the first version of
-            [phpRack](http://www.phprack.com),
+            <a href='http://www.phprack.com'>phpRack</a>,
             an open-source project for automation of integration testing
             </td>
     </tr>
@@ -81,7 +81,7 @@ We are doing custom software development since 2001, here is a list of key facts
     <tr>
         <td>July, 2009</td>
         <td>A team under our management started a development of
-            [FaZend Framework](http://www.fazend.com),
+            <a href='http://www.fazend.com'>FaZend Framework</a>,
             an open-source framework for continuous integration
             and automated building simplification
         </td>
@@ -96,41 +96,41 @@ We are doing custom software development since 2001, here is a list of key facts
     <tr>
         <td>June, 2008</td>
         <td>TechnoPark Corp. registered copyright for online project management
-        materials published on the corporate site, [read more](/about/news/uacopyright)</td>
+        materials published on the corporate site, <a href='/about/news/uacopyright'>read more</a></td>
     </tr>
 
     <tr>
         <td>April, 2008</td>
-        <td>TechnoPark Corp. becomes a member of [Better Business Bureau](http://www.bbb.org)</td>
+        <td>TechnoPark Corp. becomes a member of <a href='http://www.bbb.org'>Better Business Bureau</a></td>
     </tr>
 
     <tr>
         <td>January, 2008</td>
-        <td>TechnoPark Corp. successfully announced their ISO 9001:2000 certification, [read more](/about/news/year2008/iso9001)</td>
+        <td>TechnoPark Corp. successfully announced their ISO 9001:2000 certification, <a href='/about/news/year2008/iso9001'>read more</a></td>
     </tr>
 
     <tr>
         <td>January, 2008</td>
         <td>TechnoPark Corp. receives Online Privacy Seal from TRUSTe.org, that confirms our intention to protect
-        personally identifiable information provided to us by our customers, [read more](/about/news/truste)</td>
+        personally identifiable information provided to us by our customers, <a href='/about/news/truste'>read more</a></td>
     </tr>
 
     <tr>
         <td>March, 2007</td>
         <td>TechnoPark Corp. becomes a member of
-        [RUSSOFT.org](http://www.russoft.org/russoft/?members),
-        [read more](/about/news/news11)</td>
+        <a href='http://www.russoft.org/russoft/?members'>RUSSOFT.org</a>,
+        <a href='/about/news/news11'>read more</a></td>
     </tr>
 
     <tr>
         <td>November, 2006</td>
         <td>Mobile payment processing software, developed by TechnoPark Corp., is certified by Visa/Mastercard as
-        compliant to PCI DSS Level 1, [read more](/about/news/year2006/news16)</td>
+        compliant to PCI DSS Level 1, <a href='/about/news/year2006/news16'>read more</a></td>
     </tr>
 
     <tr>
         <td>March, 2006</td>
-        <td>TechnoPark Corp. becomes a member of [Hi-Tech Initiative](http://www.hi-tech.org.ua),
+        <td>TechnoPark Corp. becomes a member of <a href='http://www.hi-tech.org.ua'>Hi-Tech Initiative</a>,
         Ukraine.</td>
     </tr>
 
@@ -147,8 +147,4 @@ We are doing custom software development since 2001, here is a list of key facts
 
     </table>
 
-Read about our [latest news](/about/facts}">key facts
-
-<a href="${url:about/news)."/>
-
-and
+Read about our [latest news](/about/news}).
