--- a/_posts/about/news/year2009/2014-08-08-tools.md
+++ b/_posts/about/news/year2009/2014-08-08-tools.md
@@ -57,5 +57,5 @@ both high value and high quality.
 | [1888pressrelease.com](http://w
 ww.1888pressrelease.com/tools-europe-2009-attendees-to-discover-how-work-can-be-a-ga-pr-128699.html)
 | [free-press-release.com](http://www.free-press-release.com/news/200906/1245744882.html) | [sanepr.com](http://www.sanepr.c
-om/TOOLS-EUROPE-2009-Attendees-to-Discover-How-Work-Can-Be-a-Game-in-Risk-Identification\_87085.cfm)
+om/TOOLS-EUROPE-2009-Attendees-to-Discover-How-Work-Can-Be-a-Game-in-Risk-Identification_87085.cfm)
 | [i-newswire.com](http://www.i-newswire.com/pr299213.html)
