--- a/_posts/innovations/2014-08-08-metrics.md
+++ b/_posts/innovations/2014-08-08-metrics.md
@@ -73,16 +73,16 @@ your objective and at the same time will impact the programmers' motivation. The
 the better the quality-of-code will be. At the same time, the benefits for programmers will be
 higher, like salary and recognition.
 
-We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code\_coverage) and [Cyclomatic
-Complexity](http://en.wikipedia.org/wiki/Cyclomatic\_complexity). Each of them are calculated
-automatically at each round of [continuous integration](http://en.wikipedia.org/wiki/Continuous\_Integration).
+We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code_coverage) and [Cyclomatic
+Complexity](http://en.wikipedia.org/wiki/Cyclomatic_complexity). Each of them are calculated
+automatically at each round of [continuous integration](http://en.wikipedia.org/wiki/Continuous_Integration).
 
 tells you that the code is clear and simple and could be easily understood by new programmers (This
 means no more "tricks"). Cyclomatic complexity is one of the most important [software
-metrics](http://en.wikipedia.org/wiki/Software\_metric) used in [static code analysis](http://en.wikipedia.org/wiki/Static\_code\_analysis).
+metrics](http://en.wikipedia.org/wiki/Software_metric) used in [static code analysis](http://en.wikipedia.org/wiki/Static_code_analysis).
 
 tells you that for each block of code there exists a [unit
-test](http://en.wikipedia.org/wiki/Unit\_testing) that validates it. The biggest benefit of unit
+test](http://en.wikipedia.org/wiki/Unit_testing) that validates it. The biggest benefit of unit
 tests is that once the code is tested it stays workable when its author forgets how it works.
 
 In our management panel you get a graph that indicates current value of the metric and a history of
