--- a/_posts/process/cost/2014-08-08-rom.md
+++ b/_posts/process/cost/2014-08-08-rom.md
@@ -34,59 +34,60 @@ of [Features](/process/scope/feature).
 The ROM Estimate includes the following project parameters which are the foundation for estimation:
 
 <table>
-        <tr>
-            <th style="width: 100px;">Parameter</th>
-            <th>Explanation</th>
-        </tr>
+    <tr>
+        <th style="width: 100px;">Parameter</th>
+        <th>Explanation</th>
+    </tr>
 
-        <tr>
-        <td>Interval, staff-hours</td>
-        <td>Project may be completed within this range if all Requirements
-        will be within the scope specified by Vision document.</td>
-        </tr>
+    <tr>
+    <td>Interval, staff-hours</td>
+    <td>Project may be completed within this range if all Requirements
+    will be within the scope specified by Vision document.</td>
+    </tr>
 
-        <tr>
-        <td>Accuracy, %</td>
-        <td>ROM Estimate is created by three estimators. Accuracy equals to 100% minus the
-        biggest difference between one individual estimate and the mean.</td>
-        </tr>
+    <tr>
+    <td>Accuracy, %</td>
+    <td>ROM Estimate is created by three estimators. Accuracy equals to 100% minus the
+    biggest difference between one individual estimate and the mean.</td>
+    </tr>
 
-        <tr>
-        <td>Time estimate, weeks</td>
-        <td>Minimum and maximum duration of the project in weeks.</td>
-        </tr>
+    <tr>
+    <td>Time estimate, weeks</td>
+    <td>Minimum and maximum duration of the project in weeks.</td>
+    </tr>
 
-        <tr>
-        <td>Retainer</td>
-        <td>Amount of staff-hours required to complete Inception Phase in order to produce
-        detailed Specification and exact project Budget.</td>
-        </tr>
+    <tr>
+    <td>Retainer</td>
+    <td>Amount of staff-hours required to complete Inception Phase in order to produce
+    detailed Specification and exact project Budget.</td>
+    </tr>
 
-        <tr>
-        <td>KSLOC estimated</td>
-        <td>An estimate of Kilo Software Lines Of Code to be written in the project. We calculate
-        and estimate only hand-written, non-empty, non-comment lines of code.</td>
-        </tr>
+    <tr>
+    <td>KSLOC estimated</td>
+    <td>An estimate of Kilo Software Lines Of Code to be written in the project. We calculate
+    and estimate only hand-written, non-empty, non-comment lines of code.</td>
+    </tr>
 
-        <tr>
-        <td>Unadjusted FPs</td>
-        <td>Function Points as an output parameter from COCOMO-II estimate method. In a simplified approach,
-        function points could be compared with software functions or class methods.</td>
-        </tr>
+    <tr>
+    <td>Unadjusted FPs</td>
+    <td>Function Points as an output parameter from COCOMO-II estimate method. In a simplified approach,
+    function points could be compared with software functions or class methods.</td>
+    </tr>
 
-        <tr>
-        <td>Features, BC/WC/ML</td>
-        <td>List of Features from Vision document that were used by estimators. Best Case (BC),
-        Worst Case (WC), and Most Likely (ML) are the output numbers of three-point estimate method.
-        The numbers are just programming staff-hours by the estimate of programmers.</td>
-        </tr>
+    <tr>
+    <td>Features, BC/WC/ML</td>
+    <td>List of Features from Vision document that were used by estimators. Best Case (BC),
+    Worst Case (WC), and Most Likely (ML) are the output numbers of three-point estimate method.
+    The numbers are just programming staff-hours by the estimate of programmers.</td>
+    </tr>
 
-    </table>
+</table>
 
 In order to calculate the numbers above, we use our own patent-pending estimation method, that is
 based on [COCOMO-II Software Cost Estimation Technology](http://sunset.usc.edu/research/COCOMOII/),
 [PERT (Program Evaluation and Review
-Technique)](http://en.wikipedia.org/wiki/Program\_Evaluation\_and\_Review\_Technique) and [Wideband Delphi](http://en.wikipedia.org/wiki/Wideband\_delphi).
+Technique)](http://en.wikipedia.org/wiki/Program_Evaluation_and_Review_Technique)
+and [Wideband Delphi](http://en.wikipedia.org/wiki/Wideband_delphi).
 
 Completion of the ROM Estimate takes up to 48 hours.
 
