--- a/_posts/process/time/2014-08-08-spi.md
+++ b/_posts/process/time/2014-08-08-spi.md
@@ -21,7 +21,7 @@ keywords:
 next_step: process/time/iteration
 ---
 
-[Earned Value Analysis](http://en.wikipedia.org/wiki/Earned\_value\_management) is a method of
+[Earned Value Analysis](http://en.wikipedia.org/wiki/Earned_value_management) is a method of
 tracking the status of a project. It is based on numeric parameters and provides a transparent and
 un-biased snapshot of the project situation. [The Schedule](/process/time/schedule) is tracked by
 means of Earned Value (EV) and Planned Value (PV) parameters.
@@ -38,18 +38,18 @@ total Budget is 615 staff-hours, and total project duration is 40 days (this is 
 requirements attributes table):
 
 <table>
-        <tr>
-            <th>#</th>
-            <th>Requirement</th>
-            <th>Size</th>
-            <th>Status</th>
-        </tr>
-        <tr><td>R1</td><td>User can manage account</td><td>145</td><td>accepted</td></tr>
-        <tr><td>R2</td><td>User can upload video</td><td>80</td><td>accepted</td></tr>
-        <tr><td>R3</td><td>Admin can manage users</td><td>120</td><td>accepted</td></tr>
-        <tr><td>R4</td><td>Admin can view reports</td><td>180</td><td>implemented</td></tr>
-        <tr><td>R5</td><td>Admin can filter users</td><td>90</td><td>specified</td></tr>
-    </table>
+    <tr>
+        <th>#</th>
+        <th>Requirement</th>
+        <th>Size</th>
+        <th>Status</th>
+    </tr>
+    <tr><td>R1</td><td>User can manage account</td><td>145</td><td>accepted</td></tr>
+    <tr><td>R2</td><td>User can upload video</td><td>80</td><td>accepted</td></tr>
+    <tr><td>R3</td><td>Admin can manage users</td><td>120</td><td>accepted</td></tr>
+    <tr><td>R4</td><td>Admin can view reports</td><td>180</td><td>implemented</td></tr>
+    <tr><td>R5</td><td>Admin can filter users</td><td>90</td><td>specified</td></tr>
+</table>
 
 EV is the sum of 145, 80 and 120 staff-hours (all of the requirements that are accepted so far). EV
 is equal to 345 staff-hours.
