--- a/_posts/about/2014-08-08-facts.md
+++ b/_posts/about/2014-08-08-facts.md
@@ -27,53 +27,53 @@ project management methodology, provided through [teamed.io](http://www.teamed.i
 Key facts about TechnoPark Corp.:
 
 <table>
-        <tr>
-            <th style="width: 120px;">Parameter</th>
-            <th>Value</th>
-        </tr>
-        <tr><td>Business name:</td><td>TECHNOPARK CORPORATION</td></tr>
-        <tr><td>DUNS[?](https://smallbusiness.dnb.com/) Number:</td><td>62-773-2535</td></tr>
-        <tr><td>NAICS[?](http://www.census.gov/naics/) code:</td><td>541511</td></tr>
-        <tr><td>Incorporated on:</td><td>20-Feb-2006</td></tr>
-        <tr><td>Incorporated in:</td><td>State of Florida, USA</td></tr>
-        <tr><td>Legal status:</td><td>Corporation</td></tr>
-        <tr><td>Full-time Employees:</td><td>6</td></tr>
+  <tr>
+    <th style="width: 120px;">Parameter</th>
+    <th>Value</th>
+  </tr>
+  <tr><td>Business name:</td><td>TECHNOPARK CORPORATION</td></tr>
+  <tr><td>DUNS<a href='https://smallbusiness.dnb.com/'>?</a> Number:</td><td>62-773-2535</td></tr>
+  <tr><td>NAICS<a href='http://www.census.gov/naics/'>?</a> code:</td><td>541511</td></tr>
+  <tr><td>Incorporated on:</td><td>20-Feb-2006</td></tr>
+  <tr><td>Incorporated in:</td><td>State of Florida, USA</td></tr>
+  <tr><td>Legal status:</td><td>Corporation</td></tr>
+  <tr><td>Full-time Employees:</td><td>6</td></tr>
 
-        <tr><td>Headquarters and Sales Office:</td>
-        <td>568 Ninth Street South 202,<br/>
-            Naples, Florida 34102, USA<br/>
-            tel. +1 (239) 935 5429</td></tr>
+  <tr><td>Headquarters and Sales Office:</td>
+  <td>568 Ninth Street South 202,<br/>
+      Naples, Florida 34102, USA<br/>
+      tel. +1 (239) 935 5429</td></tr>
 
-        <tr><td>Profile:</td><td>Custom software development company</td></tr>
+  <tr><td>Profile:</td><td>Custom software development company</td></tr>
 
-        <tr><td>Patents (including pending ones):</td><td>
-            [12/193,010](http://www.freepatentsonline.com/20100042968.pdf),
-            [12/264,370](http://www.freepatentsonline.com/20100114638.pdf),
-            12/703,202,
-            12/840,306,
-            12/943,022
-        </td></tr>
+  <tr><td>Patents (including pending ones):</td><td>
+      <a href='http://www.freepatentsonline.com/20100042968.pdf'>12/193,010</a>,
+      <a href='http://www.freepatentsonline.com/20100114638.pdf'>12/264,370</a>,
+      12/703,202,
+      12/840,306,
+      12/943,022
+  </td></tr>
 
-        <tr><td>Certificates:</td><td>
-            [ISO 9001:2000](/news/year2008/iso9001) since Jan-08</td></tr>
+  <tr><td>Certificates:</td><td>
+      <a href='/news/year2008/iso9001'>ISO 9001:2000</a> since Jan-08</td></tr>
 
-        <!-- <tr><td>Seals:</td><td>[BBB](/about/privacypolicy) Online Seal<br/>
-            [TRUSTe](/about/privacypolicy) Privacy Seal</td></tr> -->
+  <!-- <tr><td>Seals:</td><td><a href='/about/privacypolicy'>BBB</a> Online Seal<br/>
+      <a href='/about/privacypolicy'>TRUSTe</a> Privacy Seal</td></tr> -->
 
-        <tr><td>Copyrights:</td><td>
+  <tr><td>Copyrights:</td><td>
 
-            TPC Logo with a slogan "Plan Your Success"
-            [registered](http://tarr.uspto.gov/servlet/tarr?regser=serial&amp;entry=77438094)
-            on 11-Nov-08 in US Patent and Trademark Office (USPTO)<br/><br/>
+      TPC Logo with a slogan "Plan Your Success"
+      <a href='http://tarr.uspto.gov/servlet/tarr?regser=serial&amp;entry=77438094'>registered</a>
+      on 11-Nov-08 in US Patent and Trademark Office (USPTO)<br/><br/>
 
-            Copyright for online project management materials
-            [is registered in Ukraine](/about/news/uacopyright)<br/><br/>
+      Copyright for online project management materials
+      <a href='/about/news/uacopyright'>is registered in Ukraine</a><br/><br/>
 
-            Text of our software development contract is registered
-            with [US Copyright Office](http://www.copyright.gov).
+      Text of our software development contract is registered
+      with <a href='http://www.copyright.gov'>US Copyright Office</a>.
 
-            </td></tr>
-    </table>
+      </td></tr>
+</table>
 
-[Contact us](/contacts) and we disclose more information: references, pricing, existing success
+<a href='/contacts'>Contact us</a> and we disclose more information: references, pricing, existing success
 clients, etc.
