--- a/_posts/about/2014-08-08-jobs.md
+++ b/_posts/about/2014-08-08-jobs.md
@@ -14,8 +14,7 @@ keywords:
   - Management Jobs
   - Engineering Jobs
   - Java Jobs
-  - PHP Jobs
-  - C++ Jobs
+  - Ruby Jobs
   - Remote programming jobs
 next_step: about/facts
 ---
@@ -23,24 +22,18 @@ next_step: about/facts
 There are a number of full-time positions available in our team. Please apply online if you have
 necessary skills and experience.
 
- *
+ * **CEO**. PMP, SCEA, UML, and RUP certifications are mandatory.
+  10+ years of business development. 5+ years
+  of software development and system architecture.
+  Strong leadership skills.
+  Permission to work in the United States.
+  [more...](/about/jobs/CEO)
 
- * .
-            PMP, SCEA, UML, and RUP certifications are mandatory.
-            10+ years of business development. 5+ years
-            of software development and system architecture.
-            Strong leadership skills.
-            Permission to work in the United States.
-            [more...](/about/jobs/CEO)
-
- *
-
- * .
-            PMP certification is mandatory. 5+ years of project management
-            of software development projects. Distributed development
-            experience. Permission to work in the United States.
-            [more...](/about/jobs/PM)
-
+ * **Project Manager**.
+  PMP certification is mandatory. 5+ years of project management
+  of software development projects. Distributed development
+  experience. Permission to work in the United States.
+  [more...](/about/jobs/PM)
 
 Apply online with your personal information and short message and our HR Director will get back to
 you with an offer. You may join our team on a full-time or [part-time basis](/about/teams). If you
