--- a/_posts/about/2014-08-08-why.md
+++ b/_posts/about/2014-08-08-why.md
@@ -22,7 +22,9 @@ keywords:
 next_step: about/facts
 ---
 
-We are one of the authors of a new open methodology called . We are the only company who provides a
+We are one of the authors of a new open methodology called
+[eXtremely Distributed Software Development](http://www.xdsd.org).
+We are the only company who provides a
 proprietary implementation of it, combining together tools, technologies, and talents. Application
 of XDSD in your project guarantees you:
 
@@ -35,6 +37,5 @@ of XDSD in your project guarantees you:
  * Two-step "win-win" [project quotation](/process/cost) process
  * Detailed and precise software development contract
  * [Unit testing](/process/quality/unit) as a rule
- * Plan-driven [system](/process/quality/manual}"&gt;manual
-
-<li>Information security processes compliant with ISO 27001</li>
+ * Plan-driven [quality control](/process/quality/manual)
+ * Information security processes compliant with ISO 27001
