--- a/_posts/innovations/2009-02-03-metrics.md
+++ b/_posts/innovations/2009-02-03-metrics.md
@@ -1,10 +1,11 @@
 ---
 layout: article
-date: 2014-08-08
+date: 2009-02-03
 permalink: innovations/metrics
 label: Quality of Code
 title: "A Good Way For Non-programmer Managers To Improve Quality-of-code"
 intro: "Learn how we optimize and automate Quality of Code improvement in our projects"
+tags: innovations
 description: |
   Two most important software code metrics (Test Code Coverage
   and Cyclomatic Complexity), if properly calculated and
