--- a/_posts/innovations/2009-06-23-risk-game.md
+++ b/_posts/innovations/2009-06-23-risk-game.md
@@ -1,10 +1,11 @@
 ---
 layout: article
-date: 2014-08-08
+date: 2009-06-23
 permalink: innovations/risk-game
 label: Risk Game
 title: "Risk Game"
 intro: "Learn how we optimize risk identification process using our unique Risk Game approach"
+tags: innovations
 description: |
   The described method is a risk identification scenario for
   software development projects, where the project team is
