--- a/_posts/contacts/2014-08-08-order.md
+++ b/_posts/contacts/2014-08-08-order.md
@@ -13,18 +13,15 @@ next_step: about
 
 Contact us to get a quotation for your software project. The process is simple:
 
-<ol>
-        <li>You contact us [online](/contacts)</li>
-        <li>One of our Project Managers gets back to you</li>
-        <li>We solicit your requirements ([Informal Request](/process/scope/specification))</li>
-        <li>We develop [Vision](/process/scope/vision)</li>
-        <li>You confirm that the Vision covers the whole [scope](/process/scope)</li>
-        <li>We estimate the project, you get [ROM Estimate](/process/cost/rom)</li>
-        <li>We give you [Schedule](/process/time/schedule), and Staffing estimates</li>
-        <li>We together sign a Contract</li>
-        <li>You make a first payment ([Retainer](/process/cost/model))</li>
-        <li>We start the Project and finish it [in time](/process/time),
-            according to the [SRS](/process/scope/srs)</li>
-    </ol>
+ 1. You contact us [online](/contacts)
+ 2. One of our Project Managers gets back to you
+ 3. We solicit your requirements ([Informal Request](/process/scope/specification))
+ 4. We develop [Vision](/process/scope/vision)
+ 5. You confirm that the Vision covers the whole [scope](/process/scope)
+ 6. We estimate the project, you get [ROM Estimate](/process/cost/rom)
+ 7. We give you [Schedule](/process/time/schedule), and Staffing estimates
+ 8. We together sign a Contract
+ 9. You make a first payment ([Retainer](/process/cost/model))
+ 10. We start the Project and finish it [in time](/process/time), according to the [SRS](/process/scope/srs)
 
 Start with [online contact form](/contacts).
