--- a/_posts/about/2014-08-08-news.md
+++ b/_posts/about/2014-08-08-news.md
@@ -12,3 +12,8 @@ next_step: about/facts
 ---
 
 The latest news about our company, events, conferences, and achievements:
+
+{% for post in site.tags['news'] %}
+  [{{ post.title }}]({{ post.url }}). {{ post.description }}<br/>
+  <span class="gray">published on {{ post.date | date: "%-d %b %Y" }}</span>
+{% endfor %}
